--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "pydantic>=2.7.1",
     "typer>=0.12.3",
     "pyyaml>=6.0.1",
+    "retry>=0.9.2",
 ]
 requires-python = ">=3.11"
 readme = "README.md"
