--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "typer>=0.12.3",
     "pyyaml>=6.0.1",
     "retry>=0.9.2",
+    "loguru>=0.7.2",
 ]
 requires-python = ">=3.11"
 readme = "README.md"
@@ -27,4 +28,8 @@ distribution = true
 [tool.pdm.dev-dependencies]
 dev = [
     "pytest>=8.2.0",
+    "mypy>=1.10.0",
+    "types-requests>=2.31.0.20240406",
+    "types-retry>=0.9.9.4",
+    "types-PyYAML>=6.0.12.20240311",
 ]
