--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,4 +35,5 @@ dev = [
     "types-requests>=2.31.0.20240406",
     "types-retry>=0.9.9.4",
     "types-PyYAML>=6.0.12.20240311",
+    "pytest-cov>=5.0.0",
 ]
