--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,19 +1,20 @@
 [project]
 name = "solar-registry"
-version = "0.2.5"
+version = "0.3.0"
 description = "Generate and merge meta data for testsolar test tools"
 authors = [
     { name = "asiazhang", email = "asiazhang2002@gmail.com" },
 ]
 dependencies = [
     "requests>=2.31.0",
-    "pydantic>=2.7.1",
+    "pydantic>=2.5.3",
     "typer>=0.12.3",
     "pyyaml>=6.0.1",
     "retry>=0.9.2",
     "loguru>=0.7.2",
+    "coscmd>=1.8.6.34",
 ]
-requires-python = ">=3.11"
+requires-python = ">=3.7"
 readme = "README.md"
 license = { text = "MIT" }
 
@@ -23,6 +24,10 @@ classifiers = [
     'Intended Audience :: Developers',
     'Programming Language :: Python',
     'Programming Language :: Python :: 3',
+    'Programming Language :: Python :: 3.7',
+    'Programming Language :: Python :: 3.8',
+    'Programming Language :: Python :: 3.9',
+    'Programming Language :: Python :: 3.10',
     'Programming Language :: Python :: 3.11',
     'Programming Language :: Python :: 3.12',
 ]
@@ -40,11 +45,14 @@ distribution = true
 
 [tool.pdm.dev-dependencies]
 dev = [
-    "pytest>=8.2.0",
-    "mypy>=1.10.0",
-    "types-requests>=2.31.0.20240406",
-    "types-retry>=0.9.9.4",
-    "types-PyYAML>=6.0.12.20240311",
-    "pytest-cov>=5.0.0",
+    "mypy>=1.4.1",
+    "pytest>=7.4.4",
+    "pytest-cov>=4.1.0",
     "ruff>=0.4.4",
+    "types-PyYAML>=6.0.12.12",
+    "types-requests>=2.31.0.20231231",
+    "types-retry>=0.9.9.4",
 ]
+
+[tool.ruff]
+target-version = "py37"
