--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "pyyaml>=6.0.1",
     "retry>=0.9.2",
     "loguru>=0.7.2",
+    "cos-python-sdk-v5>=1.9.28",
 ]
 requires-python = ">=3.11"
 readme = "README.md"
