--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "solar-registry"
-version = "0.2.5"
+version = "0.2.6"
 description = "Generate and merge meta data for testsolar test tools"
 authors = [
     { name = "asiazhang", email = "asiazhang2002@gmail.com" },
@@ -12,6 +12,7 @@ dependencies = [
     "pyyaml>=6.0.1",
     "retry>=0.9.2",
     "loguru>=0.7.2",
+    "cos-python-sdk-v5>=1.9.28",
 ]
 requires-python = ">=3.11"
 readme = "README.md"
@@ -47,4 +48,5 @@ dev = [
     "types-PyYAML>=6.0.12.20240311",
     "pytest-cov>=5.0.0",
     "ruff>=0.4.4",
+    "pytest-env>=1.1.3",
 ]
