--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "solar-registry"
-version = "0.2.11"
+version = "0.2.12"
 description = "Generate and merge meta data for testsolar test tools"
 authors = [
     { name = "asiazhang", email = "asiazhang2002@gmail.com" },
@@ -50,3 +50,6 @@ dev = [
     "ruff>=0.4.4",
     "pytest-env>=1.1.3",
 ]
+
+#[tool.setuptools.package-data]
+#"solar_registry" = ["py.typed"]
