如果是遗留工具，则不生成targets数据
- 检查器替换为pydantic格式
- 增加更多测试
- 增加更多遗留工具字段

--- a/tests/testdata/error_meta_files/error_yaml_with_loose.yaml
+++ b/tests/testdata/error_meta_files/error_yaml_with_loose.yaml
@@ -1,5 +1,5 @@
 schemaVersion: 1.0
-name: PyTest_XXX
+name: PyTest
 lang: python
 langType: "INTERPRETED"
 description: Pytest测试工具
@@ -12,11 +12,3 @@ homePage: https://github.com/OpenTestSolar/testtool-python-pytest
 entry:
   load: "python3 /testtools/qta/src/load.py $1"
   run: "python3 /testtools/qta/src/run.py $1"
-supportOS:
-  - windows
-  - linux
-  - darwin
-supportArch:
-  - amd64
-  - arm64
-gitPkgUrl: github.com/OpenTestSolar/testtool-python@main:pytest
