--- a/tests/testdata/pytest/testtool.yaml
+++ b/tests/testdata/pytest/testtool.yaml
@@ -6,6 +6,11 @@ langType: "INTERPRETED"
 description: Pytest测试工具
 version: '0.1.6'
 defaultBaseImage: python:3.10 # 用户在 TestContainer 配置中未指定 baseImage 时的默认镜像
+supportedCertifiedImages:
+  - 'python:3.9'
+  - 'python:3.10'
+  - 'python:3.11'
+  - 'python:3.12'
 scaffoldRepo: https://github.com/OpenTestSolar/testtool-scaffold-python-pytest/archive/refs/tags/0.1.0.tar.gz
 indexFile: https://opentestsolar.github.io/testtool-registry/testtools/stable.index.json
 versionFile: https://opentestsolar.github.io/testtool-registry/testtools/python/pytest/metadata.json
