add test_catalog/test_domains 属性

--- a/tests/testdata/legacy/testtool.yaml
+++ b/tests/testdata/legacy/testtool.yaml
@@ -49,7 +49,5 @@ legacySpec:
   logoImgUrl: https://sample.com/logo
   enableCodeCoverage: false
   maintainers: [ aa,bb ]
-
-
-
   reportType: junit
+testCatalog: unit
