--- a/tests/testdata/pytest/testtool.yaml
+++ b/tests/testdata/pytest/testtool.yaml
@@ -90,3 +90,8 @@ supportArch:
   - amd64
   - arm64
 gitPkgUrl: github.com/OpenTestSolar/testtool-python@main:pytest
+testCatalog: unit
+testDomains:
+  - windows
+  - macos
+  - server
