TestSolar测试工具增加httpPkgUrl属性
校验JSON文件时不再检查新增字段

--- a/tests/testdata/pytest/testtool.yaml
+++ b/tests/testdata/pytest/testtool.yaml
@@ -95,6 +95,7 @@ supportArch:
   - amd64
   - arm64
 gitPkgUrl: github.com/OpenTestSolar/testtool-python@main:pytest
+httpPkgUrl: https://opentestsolar.github.io/testtool-registry/testtools/python/pytest/metadata.json@stable
 testCatalog: unit
 testDomains:
   - windows
