--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "solar-registry"
-version = "0.3.21"
+version = "0.3.22"
 description = "Generate and merge meta data for testsolar test tools"
 authors = [
     { name = "asiazhang", email = "asiazhang2002@gmail.com" },
@@ -51,4 +51,5 @@ dev = [
     "pytest-cov>=5.0.0",
     "ruff>=0.4.4",
     "pytest-env>=1.1.3",
+    "setuptools>=70.2.0",
 ]
