--- a/tests/testdata/pytest/testtool.yaml
+++ b/tests/testdata/pytest/testtool.yaml
@@ -22,10 +22,12 @@ parameterDefs: # 用户 use 这个测试工具时可以配置的 with 参数
     default: auto
     choices:
       - value: auto
+        displayName: 自动解析模式
         desc: 根据测试文件的内容自动识别加载模式。数据驱动用例使用 `qtaf` 模式，其余用例使用 `ast` 模式。
       - value: ast
+        displayName: 语法解析模式
         desc: |
-          使用python内置的ast模块，运行静态语法分析模式来解析测试用例。
+          使用Python内置的ast模块，运行静态语法分析模式来解析测试用例。
 
           优点：
             - 解析速度快，不需要加载测试依赖的pip包
@@ -35,6 +37,7 @@ parameterDefs: # 用户 use 这个测试工具时可以配置的 with 参数
             - 用例的属性如果是动态变量，不一定能解析成功
             - 用例如果有复杂继承关系，不一定能解析成功
       - value: qtaf
+        displayName: 动态加载模式
         desc: |
           使用qtaf框架加载文件进行测试用例的识别。
           
@@ -52,6 +55,7 @@ parameterDefs: # 用户 use 这个测试工具时可以配置的 with 参数
     default: singleprocess # choice: singleprocess/multiprocess
     choices:
       - value: singleprocess
+        displayName: 单进程模式
         desc: |
           使用单进程执行测试用例，一般用于串行模式。
           
@@ -62,6 +66,7 @@ parameterDefs: # 用户 use 这个测试工具时可以配置的 with 参数
             - 整体执行效率可能较低
 
       - value: multiprocess
+        displayName: 多进程模式
         desc: |
           使用多进程执行测试用例，一般用于并发执行。启动的进程数由用户设置的单机并发量决定。
           
