--- a/tests/testdata/pytest/testtool.yaml
+++ b/tests/testdata/pytest/testtool.yaml
@@ -84,12 +84,12 @@ parameterDefs: # 用户 use 这个测试工具时可以配置的 with 参数
     default: ""
     lang: python
     inputWidget: code
-  - name: extraFieldsConfig
-    value: 用例额外属性
-    desc: 用例额外属性
-    lang: json
-    default: ""
-    inputWidget: code
+  - name: enableCaseFind
+    value: 开启用例查询
+    desc: 开启用例查询
+    default: "false"
+    inputWidget: switch
+
 entry:
   load: "python3 /testtools/qta/src/load.py $1"
   run: "python3 /testtools/qta/src/run.py $1"
