--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -22,17 +22,15 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - name: Set up PDM
-      uses: pdm-project/setup-pdm@v4
+    - uses: actions/setup-python@v5
       with:
-        python-version: '3.11'
-    - name: Install dependencies
-      run: |
-        pdm sync -d -G dev
+        python-version: '3.12'
+    - name: Set up uv
+      run: curl -LsSf https://astral.sh/uv/0.4.2/install.sh | sh
     - name: Build package
-      run: pdm build
+      run: uvx --from build pyproject-build --installer uv
     - name: Publish package
-      uses: pypa/gh-action-pypi-publish@release/v1
+      uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
       with:
         user: __token__
         password: ${{ secrets.PYPI_API_TOKEN }}
