--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "solar-registry"
-version = "0.3.27"
+version = "0.3.28"
 description = "Generate and merge meta data for testsolar test tools"
 authors = [
     { name = "asiazhang", email = "asiazhang2002@gmail.com" },
@@ -34,22 +34,19 @@ classifiers = [
 solar-registry = "solar_registry.cli:cli_entry"
 
 [build-system]
-requires = ["pdm-backend"]
-build-backend = "pdm.backend"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
 
-[tool.pdm]
-distribution = true
-
-[tool.pdm.dev-dependencies]
-dev = [
-    "pytest>=8.2.0",
-    "mypy>=1.10.0",
-    "types-requests>=2.31.0.20240406",
-    "types-retry>=0.9.9.4",
-    "types-PyYAML>=6.0.12.20240311",
+[tool.uv]
+dev-dependencies = [
+    "mypy>=1.11.2",
     "pytest-cov>=5.0.0",
-    "ruff>=0.4.4",
     "pytest-env>=1.1.3",
-    "setuptools>=70.2.0",
+    "pytest>=8.3.2",
+    "ruff>=0.6.3",
+    "setuptools>=74.1.0",
+    "types-pyyaml>=6.0.12.20240808",
+    "types-requests>=2.32.0.20240712",
+    "types-retry>=0.9.9.4",
 ]
