--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,18 +1,18 @@
 [project]
 name = "solar-registry"
-version = "0.3.30"
+version = "0.4.0"
 description = "Generate and merge meta data for testsolar test tools"
 authors = [
     { name = "asiazhang", email = "asiazhang2002@gmail.com" },
 ]
 dependencies = [
-    "requests>=2.31.0",
     "pydantic>=2.7.1",
     "typer>=0.12.3",
     "pyyaml>=6.0.1",
-    "retry>=0.9.2",
     "loguru>=0.7.2",
     "cos-python-sdk-v5>=1.9.30",
+    "opnieuw>=3.0.0",
+    "httpx>=0.27.2",
 ]
 requires-python = ">=3.9"
 readme = "README.md"
@@ -48,5 +48,4 @@ dev-dependencies = [
     "setuptools>=74.1.0",
     "types-pyyaml>=6.0.12.20240808",
     "types-requests>=2.32.0.20240712",
-    "types-retry>=0.9.9.4",
 ]
